Fixing information mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -22,5 +22,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 60px; 
+  padding: 20px; 
 }
